# cranpose

./: .gitignore  AGENTS.md  Cargo.toml  GPU_RENDERER_USAGE.md  NEXT_TASK.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_ANALYSIS.md  README.md  SNAPSHOT_V2_STATUS.md  all_to_txt.sh  baseline_bench.txt  modifier_match_with_jc.md  perf_robot_cpu.sh  perf_robot_heap.sh  robot_test_summary.txt  run_robot_test.sh
.github/workflows/: deploy-pages.yml  publish.yml
apps/android-demo/: AndroidManifest.xml  Cargo.toml
apps/android-demo/src/: lib.rs
apps/desktop-demo/: Cargo.toml  README.md  WEB_REQUIREMENTS.md  build-web.sh  index.html  run_robot_tests.sh
apps/desktop-demo/examples/: robot_interactive.rs  test_recorder.rs
apps/desktop-demo/robot-runners/: absent_gradient_area_recording.rs  no_fling_recording.rs  robot_advance_frame_bug.rs  robot_async_pause.rs  robot_async_tab_bug.rs  robot_click_drag.rs  robot_composition_local_disappear.rs  robot_content_type_reuse.rs  robot_copy_paste.rs  robot_demo.rs  robot_double_click.rs  robot_drag_selection.rs  robot_fling.rs  robot_fling_edge_cases.rs  robot_fling_precise.rs  robot_gradient_tab_switch.rs  robot_increment_bug.rs  robot_interactive.rs  robot_layout_validation.rs  robot_lazy_complex_scroll.rs  robot_lazy_duplication_bug.rs  robot_lazy_extreme_nav.rs  robot_lazy_fixes.rs  robot_lazy_infinite_scroll.rs  robot_lazy_items_provider.rs  robot_lazy_items_rc.rs  robot_lazy_lifecycle.rs  robot_lazy_list.rs  robot_lazy_list_after_modifiers.rs  robot_lazy_list_end_alignment.rs  robot_lazy_list_end_start_dup.rs  robot_lazy_list_order_bug.rs  robot_lazy_list_remove_dup.rs  robot_lazy_list_state_reactivity.rs  robot_lazy_max_demo.rs  robot_lazy_max_jump.rs  robot_lazy_perf.rs  robot_lazy_perf_validation.rs  robot_lazy_recursive_composition.rs  robot_lazy_scroll_edge_cases.rs  (+33 more)
apps/desktop-demo/src/: app.rs  fonts.rs  lib.rs  main.rs  minesweeper.rs
apps/desktop-demo/tests/: composition_local_dup_test.rs  modifier_showcase_layout_tests.rs  robot_combined_app_tests.rs
apps/isolated-demo/: Cargo.toml
apps/minimal-single-file/src/: main.rs
crates/compose-animation/src/: decay_spec.rs  lib.rs
crates/compose-app/: Cargo.toml
crates/compose-app-shell/: Cargo.toml
crates/compose-app-shell/src/: fps_monitor.rs  hit_path_tracker.rs  lib.rs
crates/compose-app-shell/src/tests/: app_shell_tests.rs
crates/compose-app/src/: android.rs  desktop.rs  launcher.rs  lib.rs  recorder.rs  web.rs
crates/compose-core/src/: chunked_slot_storage.rs  hierarchical_slot_storage.rs  lib.rs  runtime.rs  slot_backend.rs  slot_table.rs  snapshot_state_observer.rs  split_slot_storage.rs  state.rs
crates/compose-foundation/: Cargo.toml
crates/compose-foundation/src/: lib.rs  measurement_proxy.rs  modifier.rs  velocity_tracker.rs
crates/compose-foundation/src/tests/: modifier_tests.rs
crates/compose-foundation/src/text/: line_limits.rs  mod.rs  range.rs  state.rs
crates/compose-platform/android/: Cargo.toml
crates/compose-platform/android-winit/: Cargo.toml
crates/compose-render/wgpu/: Cargo.toml  README.md
crates/compose-runtime-std/src/: lib.rs
crates/compose-testing/: Cargo.toml  README.md
crates/compose-testing/src/: lib.rs  robot.rs  robot_app.rs  robot_assertions.rs  robot_helpers.rs  testing.rs  wgpu_robot.rs
crates/compose-testing/src/tests/: recomposition_tests.rs  robot_tests.rs  wgpu_robot_tests.rs
crates/compose-ui/: Cargo.toml
crates/compose-ui-graphics/src/: geometry.rs
crates/compose-ui-layout/src/: core.rs
crates/compose-ui/src/: cursor_animation.rs  debug.rs  fling_animation.rs  lib.rs  modifier_nodes.rs  render_state.rs  renderer.rs  scroll.rs  subcompose_layout.rs  text.rs  text_field_focus.rs  text_field_handler.rs  text_field_input.rs  text_field_modifier_node.rs  text_layout_result.rs  text_modifier_node.rs  word_boundaries.rs
crates/compose-ui/tests/: button_clickable_test.rs  composition_switching_test.rs  conditional_rendering_test.rs  modifier_offset_test.rs  modifier_reuse_test.rs  modifier_size_position_test.rs  pointer_hover_gradient_test.rs  pointer_input_end_to_end_test.rs  pointer_input_integration_test.rs  render_invalidation_test.rs
crates/cranpose/: Cargo.toml  README.md
crates/cranpose-animation/: Cargo.toml
crates/cranpose-app-shell/: Cargo.toml  README.md
crates/cranpose-app-shell/src/: lib.rs
crates/cranpose-app-shell/src/tests/: app_shell_tests.rs
crates/cranpose-core/: Cargo.toml
crates/cranpose-core/src/: snapshot_pinning.rs  snapshot_weak_set.rs  state.rs
crates/cranpose-foundation/: Cargo.toml  README.md
crates/cranpose-foundation/src/: modifier.rs
crates/cranpose-macros/: Cargo.toml
crates/cranpose-platform/web/: Cargo.toml
crates/cranpose-render/common/: Cargo.toml  README.md
crates/cranpose-render/common/src/: lib.rs
crates/cranpose-render/pixels/: Cargo.toml  README.md
crates/cranpose-render/pixels/src/: draw.rs  lib.rs  pipeline.rs  scene.rs
crates/cranpose-runtime-std/: Cargo.toml
crates/cranpose-testing/: Cargo.toml  README.md
crates/cranpose-testing/src/: robot.rs  robot_assertions.rs  robot_helpers.rs
crates/cranpose-ui/: Cargo.toml  README.md
crates/cranpose-ui-graphics/: README.md
crates/cranpose-ui-layout/: Cargo.toml  README.md
crates/cranpose-ui/src/: lib.rs  renderer.rs  scroll.rs  subcompose_layout.rs  text.rs  text_modifier_node.rs
crates/cranpose-ui/src/layout/: mod.rs
crates/cranpose-ui/src/layout/tests/: layout_tests.rs
crates/cranpose-ui/src/modifier/: chain.rs  mod.rs  slices.rs
crates/cranpose-ui/src/modifier/tests/: modifier_tests.rs
crates/cranpose-ui/src/tests/: debug_tests.rs  primitives_tests.rs
crates/cranpose-ui/src/widgets/: text.rs
crates/cranpose-ui/src/widgets/nodes/: layout_node.rs  mod.rs
crates/cranpose/src/: android.rs  desktop.rs  launcher.rs  lib.rs  present_mode.rs  recorder.rs  web.rs
docs/: DEPLOYMENT.md  GPU_RENDERER_USAGE.md  MODIFIERS.md  ROBOT_TESTING.md  ROBOT_TESTING_REAL_APP.md  SNAPSHOTS_AND_SLOTS.md  TEXT_INPUT_ARCHITECTURE.md  lazy_list_doc.md  perf_notes.md
(+78 files in other folders)
