[workspace]
members = [
    "crates/cranpose-app-shell",
    "crates/cranpose",
    "crates/cranpose-assets",
    "crates/cranpose-core",
    "crates/cranpose-macros",
    "crates/cranpose-runtime-std",
    "crates/cranpose-ui-graphics",
    "crates/cranpose-ui-layout",
    "crates/cranpose-foundation",
    "crates/cranpose-animation",
    "crates/cranpose-ui",
    "crates/cranpose-testing",
    "crates/cranpose-platform/desktop-winit",
    "crates/cranpose-platform/android",
    "crates/cranpose-platform/web",
    "crates/cranpose-render/common",
    "crates/cranpose-render/pixels",
    "crates/cranpose-render/wgpu",
    "apps/desktop-demo",
    "apps/minimal-single-file",
]
resolver = "2"

[workspace.package]
version = "0.0.29"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/samoylenkodmitry/cranpose"
homepage = "https://samoylenkodmitry.github.io/cranpose/"

[workspace.dependencies]
# Force android-activity to use native-activity feature across all workspace crates
android-activity = { version = "0.6", features = ["native-activity"] }
cranpose-animation = { path = "crates/cranpose-animation", version = "0.0.29" }
cranpose = { path = "crates/cranpose", version = "0.0.29" }
cranpose-app-shell = { path = "crates/cranpose-app-shell", version = "0.0.29" }
cranpose-assets = { path = "crates/cranpose-assets", version = "0.0.29" }
cranpose-core = { path = "crates/cranpose-core", version = "0.0.29" }
cranpose-foundation = { path = "crates/cranpose-foundation", version = "0.0.29" }
cranpose-macros = { path = "crates/cranpose-macros", version = "0.0.29" }
cranpose-platform-android = { path = "crates/cranpose-platform/android", version = "0.0.29" }
cranpose-platform-desktop-winit = { path = "crates/cranpose-platform/desktop-winit", version = "0.0.29" }
cranpose-platform-web = { path = "crates/cranpose-platform/web", version = "0.0.29" }
cranpose-render-common = { path = "crates/cranpose-render/common", version = "0.0.29" }
cranpose-render-pixels = { path = "crates/cranpose-render/pixels", version = "0.0.29" }
cranpose-render-wgpu = { path = "crates/cranpose-render/wgpu", version = "0.0.29" }
cranpose-runtime-std = { path = "crates/cranpose-runtime-std", version = "0.0.29" }
cranpose-testing = { path = "crates/cranpose-testing", version = "0.0.29" }
cranpose-ui = { path = "crates/cranpose-ui", version = "0.0.29" }
cranpose-ui-graphics = { path = "crates/cranpose-ui-graphics", version = "0.0.29" }
cranpose-ui-layout = { path = "crates/cranpose-ui-layout", version = "0.0.29" }

# Release profile optimizations for smaller binaries
[profile.release]
opt-level = "s"         # Optimize for size (use "z" only for WASM)
lto = true              # Link-Time Optimization across crates
codegen-units = 1       # Better optimization (single codegen unit)
strip = true            # Strip symbols from binary
panic = "abort"         # Smaller binaries (no unwinding)
debug = 0               # No debug info

# Maximum size optimization profile (slower builds, smaller binaries)
[profile.release-small]
inherits = "release"
opt-level = "z"         # Optimize for size over speed
lto = "fat"             # Full LTO for maximum optimization

# WASM-specific profile for web builds
[profile.wasm-release]
inherits = "release"
opt-level = "z"         # Aggressive size optimization for WASM
