[package]
name = "compose-app-shell"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Application orchestration shell for Compose-RS"

[dependencies]
compose-core = { path = "../compose-core" }
compose-runtime-std = { path = "../compose-runtime-std" }
compose-render-common = { path = "../compose-render/common" }
compose-ui = { path = "../compose-ui" }
compose-ui-graphics = { path = "../compose-ui-graphics" }
compose-foundation = { path = "../compose-foundation" }
log = "0.4"
# WASM-compatible time - web-time is what winit uses internally
web-time = "1.1"

[dev-dependencies]
compose-macros = { path = "../compose-macros" }

# Clipboard support (desktop only - not available on WASM or Android)
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
arboard = { version = "3.4", default-features = false }
