[package]
name = "compose-testing"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Testing utilities and harness for Compose-RS"

[dependencies]
compose-core = { path = "../compose-core" }
compose-foundation = { path = "../compose-foundation" }
compose-ui = { path = "../compose-ui" }

[dev-dependencies]
compose-macros = { path = "../compose-macros" }

[features]
default = []
