[package]
name = "compose-testing"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Testing utilities and harness for Compose-RS"

[dependencies]
compose-core = { path = "../compose-core" }
compose-foundation = { path = "../compose-foundation" }
compose-ui = { path = "../compose-ui" }
compose-app-shell = { path = "../compose-app-shell" }
compose-render-common = { path = "../compose-render/common" }
compose-ui-graphics = { path = "../compose-ui-graphics" }

# Optional dependencies for real app testing
compose-render-wgpu = { path = "../compose-render/wgpu", optional = true }
winit = { version = "0.29", optional = true }
pollster = { version = "0.3", optional = true }
wgpu = { version = "0.19", optional = true }

[dev-dependencies]
compose-macros = { path = "../compose-macros" }

[features]
default = []
# Enable real app testing with actual rendering (requires display/window system)
robot-app = ["compose-render-wgpu", "winit", "pollster", "wgpu"]
