[package]
name = "cranpose-foundation"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Modifiers, nodes, and foundation elements for Cranpose"

[dependencies]
cranpose-core = { workspace = true }
cranpose-macros = { workspace = true }
cranpose-ui-graphics = { workspace = true }
cranpose-ui-layout = { workspace = true }
smallvec = "1.13"
web-time = "1.1"
log = "0.4"

[features]
default = []
