[package]
name = "cranpose-testing"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Testing utilities and harness for Cranpose"

[dependencies]
cranpose-core = { workspace = true }
cranpose-foundation = { workspace = true }
cranpose-ui = { workspace = true }
cranpose-app-shell = { workspace = true }
cranpose-render-common = { workspace = true }
cranpose-ui-graphics = { workspace = true }

# Optional dependencies for real app testing
cranpose = { workspace = true, features = ["robot"], optional = true }

[dev-dependencies]
cranpose-macros = { workspace = true }

[features]
default = []
# Enable real app testing with actual rendering (requires display/window system)
# This uses the REAL desktop app runner from cranpose
robot-app = ["cranpose"]
