[package]
name = "cranpose-platform-web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Web platform adapter for Cranpose"

[dependencies]
cranpose-foundation = { workspace = true }
cranpose-ui-graphics = { workspace = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "MouseEvent",
    "Touch",
    "TouchList",
    "TouchEvent",
    "PointerEvent",
    "WheelEvent",
    "KeyboardEvent",
] }
