[package]
name = "cranpose-render-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Common rendering contracts for Cranpose"

[dependencies]
cranpose-foundation = { workspace = true }
cranpose-ui-graphics = { workspace = true }
cranpose-ui = { workspace = true }
cranpose-core = { workspace = true }
